syntax = "proto3";
package patcher;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = ".;patcher";

service PatcherService {
    rpc AddPatch (AddPatchRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v1/patch"
            body: "*"
        };
    }

    rpc ApplyPatch (ApplyPatchRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v1/patch/apply"
            body: "*"
        };
    }

    rpc GetPatch (GetPatchRequest) returns (GetPatchResponse) {
        option (google.api.http) = {
            get: "/api/v1/patch/{patchID}"
        };
    }

    rpc GetPatchContent (GetPatchContentRequest) returns (GetPatchContentResponse) {
        option (google.api.http) = {
            get: "/api/v1/patch/{patchID}/content"
        };
    }

    rpc QueryPatches (QueryPatchesRequest) returns (QueryPatchesResponse) {
        option (google.api.http) = {
            post: "/api/v1/patches"
            body: "*"
        };
    }
}

message AddPatchRequest {
    string project = 1;
    string author = 2;
    string device = 3;
    string patchContent = 4;
}

message ApplyPatchRequest {
    string patchID = 1;
}

message GetPatchRequest {
    string patchID = 1;
}

message GetPatchResponse {
    string id = 1;
    string project = 2;
    bool applied = 3;
    string author = 4;
    string device = 5;
    int64 createdAt = 6;
}

message GetPatchContentRequest {
    string patchID = 1;
}

message GetPatchContentResponse {
    string content = 1;
}

message QueryPatchesRequest {
    repeated string patchIDs = 1;
    repeated string projects = 2;
    repeated string authors = 3;
    repeated string devices = 4;
    int64 after = 5;
    int64 before = 6;
}

message QueryPatchesResponse {
    repeated Patch patches = 1;
}

message Patch {
    string id = 1;
    string project = 2;
    bool applied = 3;
    string author = 4;
    string device = 5;
    int64 createdAt = 6;
}